Fix so hero image isn't covering the whole home page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,11 +3,15 @@ html {
 }
 
 body {
+    background: #000;
+    color: white;
+    font-family: 'Lato';
+}
+
+.hero-image {
     background: url('/media/hero_image.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 60px);
-    color: white;
-    font-family: 'Lato';
 }
 
 /* From Bulma as in CI video, Boutique Ado */
